tests/neg/inline-trait-signature-parameters-using.scala
inline trait A(using usng: Int) // error

given x: Int = 1
class B extends A()